--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,41 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.os-typewriter {
+  display: flex;
+  text-align: start;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  color: #075D8C;
+  white-space: nowrap; /* Keeps the content on a single line */
+  letter-spacing: .15em; /* Adjust as needed */
+  text-shadow: 2px 2px 8px #075D8C;
+  animation: 
+    typing 8s steps(100, end),
+    blink-caret .75s step-end infinite;
+}
+
+.logo{
+  animation: none;
+}
+
+.font-blink{
+  animation: blink .75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: #075D8C; }
+}
+
+@keyframes blink {
+  from, to { opacity: 0 }
+  50% { opacity: 1 }
+}
