--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,6 +58,10 @@ body {
   transform: translateY(0);
 }
 
+*::-webkit-scrollbar{
+  display: none;
+}
+
 /* The typing effect */
 @keyframes typing {
   from { width: 0 }
